@@ -13,7 +13,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: io.test,v 1.78 2007/11/14 19:53:27 andreas_kupries Exp $
+# RCS: @(#) $Id: io.test,v 1.79 2007/12/09 22:24:03 hobbs Exp $
 
 if {[catch {package require tcltest 2}]} {
     puts stderr "Skipping tests in [info script].  tcltest 2 required."
@@ -7450,6 +7450,11 @@ foreach {n msg expected} {
 	set res
     } [lrange $expected 0 end]
 }
+
+test io-73.1 {channel Tcl_Obj SetChannelFromAny} {} {
+    # Test for Bug 1847044 - don't spoil type unless we have a valid channel
+    catch {close [lreplace [list a] 0 end]}
+} {1}
 
 # ### ### ### ######### ######### #########
 
